--- a/.github/workflows/Mysql-table.yml
+++ b/.github/workflows/Mysql-table.yml
@@ -1,7 +1,8 @@
 name: 'Initialize MySQL Tables & Data'
 
 on:
-  workflow_run:
+  workflow_dispatch: {}  # Manual trigger
+  workflow_run:          # Trigger after "Terraform Infrastructure Pipeline" completes successfully
     workflows: ["Terraform Infrastructure Pipeline"]
     types:
       - completed
@@ -9,7 +10,7 @@ on:
 jobs:
   init-db:
     name: Initialize MySQL Tables & Data
-    runs-on: qa  # your self-hosted runner label
+    runs-on: qa  # self-hosted runner
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
@@ -29,7 +30,6 @@ jobs:
           DB_PASSWORD: ${{ secrets.RDS_PASSWORD }}
         run: |
           echo "Waiting for RDS to be ready..."
-          sleep 60  # Give RDS some time to become available
-          
+          sleep 60
           echo "Running SQL script against RDS at $DB_HOST"
           mysql -h "$DB_HOST" -P "$DB_PORT" -u "$DB_USER" -p"$DB_PASSWORD" < db/DB_Queries.sql
