--- a/.github/workflows/backend-app-ci.yml
+++ b/.github/workflows/backend-app-ci.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      - name:  Make mvnw executable
+        run: chmod +x app/backend-src/mvnw
+
       - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
