--- a/.github/workflows/backend-app-ci.yml
+++ b/.github/workflows/backend-app-ci.yml
@@ -53,6 +53,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Deploy to EKS
-        run: |
+      if: false  
+      run: |
           sed -i "s|<IMAGE_TAG>|${{ env.IMAGE_TAG }}|g" app/backend-src/k8s/Deployment.yml
           kubectl apply -f app/backend-src/k8s/Deployment.yml
