--- a/.github/workflows/backend-app-ci.yml
+++ b/.github/workflows/backend-app-ci.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  backend-ci-cd:
+  backend-ci:
     runs-on: [self-hosted, linux, qa]  # Your self-hosted runner labels
 
     env:
