--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -1,7 +1,12 @@
+name: Deploy to EKS
+
+on:
+  workflow_dispatch:
+
 jobs:
   deploy-to-eks:
     runs-on: [self-hosted, linux, qa]
-    workflow_dispatch:
+
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -14,11 +19,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Set up kubeconfig for EKS
-        run: aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name AWS_SECRET_EKS_CLUSTER_NAME
+        run: |
+          echo "Setting up kubeconfig for cluster: ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}"
+          aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
+          kubectl get nodes  # verify authentication
 
       - name: Deploy to EKS
         run: |
+          echo "Deploying backend application..."
           kubectl apply -f app/backend-src/k8s/Deployment.yml
-
-
-      
