--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -1,14 +1,18 @@
-name: Deploy Backend to EKS CD
+name: Deploy Backend to EKS (CD)
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
+    paths:
+      - 'app/backend-src/k8s/**'
 
 jobs:
   deploy-to-eks:
     runs-on: [self-hosted, linux, qa]
-
     env:
-      AWS_REGION: ap-south-1
+      AWS_REGION: ${{ secrets.AWS_REGION }}
       ECR_REPOSITORY: ecommerce-backend
 
     steps:
@@ -20,23 +24,29 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Log in to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Set up kubeconfig for EKS
         run: |
           aws eks update-kubeconfig \
             --region $AWS_REGION \
-            --name ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
-
-      - name: Set ECR image URI
-        run: echo "ECR_IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.run_id }}" >> $GITHUB_ENV
+            --name ${{ secrets.EKS_CLUSTER_NAME }}
 
       - name: Render Kubernetes manifest
-        run: envsubst < app/backend-src/k8s/Deployment.yml > k8s-deploy.yml
+        run: |
+          export IMAGE_TAG=${{ github.run_id }}
+          export ECR_REGISTRY=$(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.$AWS_REGION.amazonaws.com
+          export FULL_IMAGE="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          envsubst < app/backend-src/k8s/Deployment.yml > k8s-deploy.yml
 
-      - name: Apply manifest to EKS
+      - name: Deploy to EKS
         run: kubectl apply -f k8s-deploy.yml
+
+      - name: Wait for deployment rollout
+        run: kubectl rollout status deployment/productsapideployment --timeout=90s
+
+      - name: Debug pod if rollout failed
+        if: failure()
+        run: |
+          kubectl get pods
+          kubectl describe pod $(kubectl get pods -l app=products -o jsonpath="{.items[0].metadata.name}")
