--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       ECR_REPOSITORY: ecommerce-backend
+      EKS_CLUSTER_NAME: ${{ secrets.AWS_EKS_CLUSTER_NAME }}
 
     steps:
       - name: Checkout source
@@ -30,7 +31,7 @@ jobs:
         run: |
           aws eks update-kubeconfig \
             --region $AWS_REGION \
-            --name ${{ secrets.AWS_EKS_CLUSTER_NAME }}
+            --name $EKS_CLUSTER_NAME
 
       - name: Render Kubernetes manifest
         run: |
