--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       ECR_REPOSITORY: ecommerce-backend
-      EKS_CLUSTER_NAME: ${{ secrets.AWS_EKS_CLUSTER_NAME }}
+      EKS_CLUSTER_NAME: ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
 
     steps:
       - name: Checkout source
