--- a/app/backend-src/k8s/Deployment.yml
+++ b/app/backend-src/k8s/Deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: productscontainer
-          image: image: ${ECR_REGISTRY}/ecommerce-backend:${IMAGE_TAG}
+          image: image: ${FULL_IMAGE}
           ports:
             - containerPort: 8080
 ---
