deploy-to-eks.yml

--- a/app/backend-src/k8s/Deployment.yml
+++ b/app/backend-src/k8s/Deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: productscontainer
-          image: image: ${FULL_IMAGE}
+          image: ${FULL_IMAGE}
           ports:
             - containerPort: 8080
 ---
