--- a/.github/workflows/backend-app-ci.yml
+++ b/.github/workflows/backend-app-ci.yml
@@ -49,11 +49,9 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          IMAGE_URI=$ECR_REGISTRY/$ECR_REPOSITORY
+          echo "Building image with tags: $IMAGE_TAG and latest"
+          docker build -t $IMAGE_URI:$IMAGE_TAG -t $IMAGE_URI:latest .
+          docker push $IMAGE_URI:$IMAGE_TAG
+          docker push $IMAGE_URI:latest
 
-      - name: Deploy to EKS
-        if: false  
-        run: |
-          sed -i "s|<IMAGE_TAG>|${{ env.IMAGE_TAG }}|g" app/backend-src/k8s/Deployment.yml
-          kubectl apply -f app/backend-src/k8s/Deployment.yml
