--- a/.github/workflows/Frontend-to-eks.yml
+++ b/.github/workflows/Frontend-to-eks.yml
@@ -9,11 +9,12 @@ on:
       - 'app/frontend-src/k8s/**'
 
 jobs:
-  deploy-frontend:
+  deploy-to-eks:
     runs-on: [self-hosted, linux, qa]
+
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      ECR_REPOSITORY: ecommerce-frontend  # Only needed if using ECR
+      ECR_REPOSITORY: ecommerce-frontend
       EKS_CLUSTER_NAME: ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
 
     steps:
@@ -38,11 +39,7 @@ jobs:
           export IMAGE_TAG=latest
           export ECR_REGISTRY=$(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.$AWS_REGION.amazonaws.com
           export FULL_IMAGE="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-          # Optional: If using ECR image, uncomment next line
-          # sed "s|IMAGE_PLACEHOLDER|$FULL_IMAGE|" app/frontend-src/k8s/Deployment.yml > k8s-frontend-deploy.yml
-          
-          # Using Docker Hub image as is
-          cp app/frontend-src/k8s/Deployment.yml k8s-frontend-deploy.yml
+          envsubst < app/frontend-src/k8s/Deployment.yml > k8s-frontend-deploy.yml
 
       - name: Deploy to EKS
         run: kubectl apply -f k8s-frontend-deploy.yml
