--- a/.github/workflows/project_2_maven-web-app.yml
+++ b/.github/workflows/project_2_maven-web-app.yml
@@ -12,7 +12,7 @@ jobs:
 
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      ECR_REPOSITORY: project_01_maven-web-app
       ECR_REGISTRY: ${{ secrets.ECR_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
       IMAGE_TAG: ${{ github.run_id }}
 
