--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -40,10 +40,20 @@ jobs:
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
 
-      - name: Build and push Docker image to ECR
+      - name: Build Docker image
         working-directory: app/frontend-src
         run: |
           echo "Building image: $IMAGE_URI:$IMAGE_TAG"
           docker build -t $IMAGE_URI:$IMAGE_TAG -t $IMAGE_URI:latest .
+
+      - name: Scan Docker image with Trivy (Fail on HIGH/CRITICAL)
+        run: |
+          echo "Scanning image with Trivy: $IMAGE_URI:$IMAGE_TAG"
+          trivy image --exit-code 1 --severity HIGH,CRITICAL $IMAGE_URI:$IMAGE_TAG
+
+      - name: Push Docker image to ECR
+        working-directory: app/frontend-src
+        run: |
+          echo "Pushing image: $IMAGE_URI:$IMAGE_TAG"
           docker push $IMAGE_URI:$IMAGE_TAG
           docker push $IMAGE_URI:latest
