--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -44,7 +44,7 @@ jobs:
         working-directory: app/frontend-src
         run: |
           npm install
-          npm run test -- --coverage
+          npm run test -- --code-coverage
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarqube-scan-action@v2
