--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Install Node.js dependencies and run tests with coverage
         working-directory: app/frontend-src
+        env:
+          CHROME_BIN: /usr/bin/google-chrome
         run: |
           npm install
           npm run test -- --code-coverage
