--- a/app/frontend-src/src/sonar-project.properties
+++ b/app/frontend-src/src/sonar-project.properties
@@ -1,6 +1,20 @@
-sonar.projectKey=ecommerce-frontend
-sonar.projectName=Ecommerce Frontend
-sonar.projectVersion=1.0
+# app/frontend-src/sonar-project.properties
+
+
+sonar.host.url=${SONAR_HOST_URL}
+sonar.login=${SONAR_TOKEN}
+
+# Project structure
 sonar.sources=src
 sonar.tests=src
-sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov-report.html
+sonar.test.inclusions=**/*.spec.ts
+sonar.exclusions=**/*.spec.ts,**/node_modules/**
+
+# Language
+sonar.language=ts
+
+# Coverage
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# Optional: Improve issues location
+sonar.typescript.tsconfigPath=tsconfig.spec.json
