--- a/app/frontend-src/tsconfig.spec.json
+++ b/app/frontend-src/tsconfig.spec.json
@@ -5,5 +5,8 @@
     "types": ["jest"],
     "esModuleInterop": true
   },
-  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": [
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts"
+  ]
 }
