--- a/app/frontend-src/package.json
+++ b/app/frontend-src/package.json
@@ -5,34 +5,32 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --coverage --runInBand"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
-    "rxjs": "~7.5.0",
+    "@angular/animations": "^15.2.0",
+    "@angular/common": "^15.2.0",
+    "@angular/compiler": "^15.2.0",
+    "@angular/core": "^15.2.0",
+    "@angular/forms": "^15.2.0",
+    "@angular/platform-browser": "^15.2.0",
+    "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/router": "^15.2.0",
+    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.1",
-    "@angular/cli": "~15.0.1",
-    "@angular/compiler-cli": "^15.0.0",
-    "@angular-builders/jest": "^15.0.0",
-    "@types/jest": "^29.5.4",
-    "jest": "^29.6.4",
-    "ts-jest": "^29.1.1",
-    "jest-preset-angular": "^14.0.0",
-    "typescript": "~4.8.2"
+    "@angular-builders/jest": "15.0.0",
+    "@angular-devkit/build-angular": "^15.2.0",
+    "@angular/cli": "^15.2.0",
+    "@angular/compiler-cli": "^15.2.0",
+    "@types/jest": "^28.1.6",
+    "jest": "28.1.3",
+    "jest-preset-angular": "11.1.2",
+    "ts-jest": "28.0.8",
+    "typescript": "~4.8.4"
   }
 }
