--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -44,7 +44,7 @@ jobs:
         working-directory: app/frontend-src
 
         run: |
-          npm install
+          npm install --save-dev jest@28.1.3 ts-jest@28.0.8 jest-preset-angular@11.1.2 jest-environment-jsdom@28.1.3 @types/jest@28.1.6
           npm run test -- --coverage
 
       - name: SonarCloud Scan
