--- a/app/frontend-src/tsconfig.spec.json
+++ b/app/frontend-src/tsconfig.spec.json
@@ -5,6 +5,9 @@
     "types": ["jest"],
     "esModuleInterop": true
   },
+  "files": [
+    "setup-jest.ts"
+  ],
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
