--- a/app/frontend-src/tsconfig.spec.json
+++ b/app/frontend-src/tsconfig.spec.json
@@ -7,9 +7,11 @@
   },
   "files": [
     "setup-jest.ts"
+    "jest-preset-angular.d.ts"
   ],
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
+    "jest-preset-angular.d.ts"
   ]
 }
