--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -7,12 +7,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  sonarcloud-analysis:
     runs-on: [self-hosted, linux, qa]  # Ensure EC2 runner has these labels
 
     steps:
-      - name: Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Ensures full git history for blame and analysis
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -23,22 +25,30 @@ jobs:
       - name: Build with Maven
         run: mvn clean install -f Project-3/MyWebApp/pom.xml
 
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@v2
-        with:
-          projectBaseDir: Project-3/MyWebApp
-          args: >
-            -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo
-            -Dsonar.organization=chandrakatore2004
-         
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      - name: Run SonarCloud Scan (via Maven plugin)
+        run: mvn sonar:sonar \
+          -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo \
+          -Dsonar.organization=chandrakatore2004 \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+          -f Project-3/MyWebApp/pom.xml
+
+      - name: Wait for SonarCloud report (optional)
+        run: sleep 15
 
       - name: SonarCloud Quality Gate check
         id: sonarcloud-quality-gate
         uses: sonarsource/sonarqube-quality-gate-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-
-
-  
+      - name: Fail pipeline if Quality Gate fails
+        if: always()
+        run: |
+          echo "Quality Gate Status: ${{ steps.sonarcloud-quality-gate.outputs.quality-gate-status }}"
+          if [ "${{ steps.sonarcloud-quality-gate.outputs.quality-gate-status }}" != "PASSED" ]; then
+            echo "❌ SonarCloud Quality Gate failed."
+            exit 1
+          else
+            echo "✅ SonarCloud Quality Gate passed."
+          fi
