--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -30,6 +30,8 @@ jobs:
           args: >
             -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo
             -Dsonar.organization=chandrakatore2004
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}     
          
 
 
