--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Required for SonarCloud blame info
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -23,26 +25,16 @@ jobs:
       - name: Build with Maven
         run: mvn clean install -f Project-3/MyWebApp/pom.xml
 
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@v2
-        with:
-          projectBaseDir: Project-3/MyWebApp
-          args: >
-            -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo
-            -Dsonar.organization=chandrakatore2004
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}     
-         
-
+      - name: SonarCloud Scan (via Maven plugin)
+        run: mvn sonar:sonar \
+          -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo \
+          -Dsonar.organization=chandrakatore2004 \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+          -f Project-3/MyWebApp/pom.xml
 
       - name: SonarCloud Quality Gate check
         id: sonarcloud-quality-gate
         uses: sonarsource/sonarqube-quality-gate-action@master
-      
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-
-
-
-  
