--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -16,11 +16,11 @@ jobs:
         with:
           fetch-depth: 0  # Required for SonarCloud blame info
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Build with Maven
         run: mvn clean install -f Project-3/MyWebApp/pom.xml
@@ -28,7 +28,7 @@ jobs:
       - name: SonarCloud Scan (via Maven plugin)
         working-directory: Project-3/MyWebApp
         run: >
-          mvn sonar:sonar 
+          mvn org.sonarsource.scanner.maven:sonar-maven-plugin:4.0.0.4121:sonar 
           -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo 
           -Dsonar.organization=chandrakatore2004 
           -Dsonar.host.url=https://sonarcloud.io 
