--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -8,35 +8,43 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, linux, qa]  # Ensure EC2 runner has these labels
+    runs-on: [self-hosted, linux, qa]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Required for SonarCloud blame info
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build with Maven
         run: mvn clean install -f Project-3/MyWebApp/pom.xml
 
-      - name: SonarCloud Scan (via Maven plugin)
-        working-directory: Project-3/MyWebApp
-        run: >
-          mvn org.sonarsource.scanner.maven:sonar-maven-plugin:4.0.0.4121:sonar 
-          -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo 
-          -Dsonar.organization=chandrakatore2004 
-          -Dsonar.host.url=https://sonarcloud.io 
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }} 
-          
+      - name: Run SonarCloud Analysis
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo \
+            -Dsonar.organization=chandrakatore2004 \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -f Project-3/MyWebApp/pom.xml
 
       - name: SonarCloud Quality Gate check
         id: sonarcloud-quality-gate
         uses: sonarsource/sonarqube-quality-gate-action@master
+        with:
+          scanMetadataReportFile: Project-3/MyWebApp/.scannerwork/report-task.txt
+          pollingTimeoutSec: 300
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
