--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -29,16 +29,17 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: mvn clean install -f Project-3/MyWebApp/pom.xml
+        working-directory: Project-3/MyWebApp
+        run: mvn clean install
 
       - name: Run SonarCloud Analysis
+        working-directory: Project-3/MyWebApp
         run: |
           mvn sonar:sonar \
             -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo \
             -Dsonar.organization=chandrakatore2004 \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-            -f Project-3/MyWebApp/pom.xml
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: Check SonarCloud Quality Gate
         uses: sonarsource/sonarqube-quality-gate-action@master
