--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  sonarcloud:
+  SonarCloud:
     runs-on: [self-hosted, linux, qa]
 
     steps:
@@ -23,7 +23,7 @@ jobs:
       - name: Cache Maven dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.m2
+          path: ~/.m2 # Improves performance by caching
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
@@ -38,13 +38,12 @@ jobs:
           mvn sonar:sonar \
             -Dsonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo \
             -Dsonar.organization=chandrakatore2004 \
-            -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: SonarCloud Quality Gate check
         uses: sonarsource/sonarqube-quality-gate-action@master
         with:
           scanMetadataReportFile: Project-3/MyWebApp/target/sonar/report-task.txt
-          pollingTimeoutSec: 300
+          pollingTimeoutSec: 60
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
