--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -37,3 +37,45 @@ jobs:
           SHORT_SHA=${GITHUB_SHA::7}
           SAFE_REPO=$(echo "${GITHUB_REPOSITORY}" | tr '/' '-')
           IMAGE_TAG="${SAFE_REPO}-${SHORT_SHA}"
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
+
+      - name: Install Node.js dependencies and run tests with coverage
+        working-directory: app/frontend-src
+        run: |
+          npm ci
+          npm install --save-dev jest@28.1.3 ts-jest@28.0.8 jest-preset-angular@11.1.2 jest-environment-jsdom@28.1.3 @types/jest@28.1.6
+          npm run test -- --coverage
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          projectBaseDir: app/frontend-src
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      # Optional: enforce SonarCloud Quality Gate (if needed)
+      # - name: Wait for Quality Gate result
+      #   uses: SonarSource/sonarcloud-quality-gate-action@v1.1.0
+      #   with:
+      #     scanStatus: ${{ steps.sonarcloud_scan.outputs.projectStatus }}
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Build Docker image
+        working-directory: app/frontend-src
+        run: |
+          echo "Building image: $IMAGE_URI:$IMAGE_TAG"
+          docker build -t $IMAGE_URI:$IMAGE_TAG -t $IMAGE_URI:latest .
+
+      - name: Scan Docker image with Trivy (fail on HIGH/CRITICAL)
+        run: |
+          echo "Scanning image with Trivy: $IMAGE_URI:$IMAGE_TAG"
+          trivy image --exit-code 1 --severity HIGH,CRITICAL $IMAGE_URI:$IMAGE_TAG
+
+      - name: Push Docker image to ECR
+        working-directory: app/frontend-src
+        run: |
+          echo "Pushing image: $IMAGE_URI:$IMAGE_TAG"
+          docker push $IMAGE_URI:$IMAGE_TAG
+          docker push $IMAGE_URI:latest
