--- a/app/frontend-src/package.json
+++ b/app/frontend-src/package.json
@@ -23,14 +23,15 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "15.0.0",
+    "@angular-builders/jest": "^15.0.0",
     "@angular-devkit/build-angular": "^15.2.0",
     "@angular/cli": "^15.2.0",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jest": "^28.1.6",
-    "jest": "28.1.3",
-    "jest-preset-angular": "11.1.2",
-    "ts-jest": "28.0.8",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "jest-preset-angular": "^11.1.2",
+    "ts-jest": "^28.0.8",
     "typescript": "~4.8.4"
   }
 }
