--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -40,11 +40,15 @@ jobs:
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
 
-      - name: Install Node.js dependencies and run tests with coverage
+      - name: Clean node_modules and lock file
         working-directory: app/frontend-src
         run: |
-          npm ci
-          npm install --save-dev jest@28.1.3 ts-jest@28.0.8 jest-preset-angular@11.1.2 jest-environment-jsdom@28.1.3 @types/jest@28.1.6
+          rm -rf node_modules package-lock.json
+
+      - name: Install dependencies and run tests with coverage
+        working-directory: app/frontend-src
+        run: |
+          npm install --save-dev jest@28.1.3 ts-jest@28.0.8 jest-preset-angular@11.1.2 jest-environment-jsdom@28.1.3 @types/jest@28.1.6 @angular-builders/jest@15.0.0
           npm run test -- --coverage
 
       - name: SonarCloud Scan
@@ -54,11 +58,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # Optional: enforce SonarCloud Quality Gate (if needed)
+      # Optional: Enforce SonarCloud Quality Gate (uncomment if needed)
       # - name: Wait for Quality Gate result
       #   uses: SonarSource/sonarcloud-quality-gate-action@v1.1.0
-      #   with:
-      #     scanStatus: ${{ steps.sonarcloud_scan.outputs.projectStatus }}
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
@@ -70,11 +72,10 @@ jobs:
 
       - name: Scan Docker image with Trivy (fail on HIGH/CRITICAL)
         run: |
-          echo "Scanning image with Trivy: $IMAGE_URI:$IMAGE_TAG"
+          echo "Scanning image: $IMAGE_URI:$IMAGE_TAG"
           trivy image --exit-code 1 --severity HIGH,CRITICAL $IMAGE_URI:$IMAGE_TAG
 
       - name: Push Docker image to ECR
-        working-directory: app/frontend-src
         run: |
           echo "Pushing image: $IMAGE_URI:$IMAGE_TAG"
           docker push $IMAGE_URI:$IMAGE_TAG
