--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -1,4 +1,4 @@
-name: Frontend CI Pipeline-new
+name: Frontend CI Pipeline-New
 
 on:
   push:
@@ -14,10 +14,11 @@ jobs:
 
     env:
       AWS_REGION: ap-south-1
+      AWS_DEFAULT_REGION: ap-south-1
       ECR_REPOSITORY: ecommerce-frontend
 
     steps:
-      - name: Checkout source
+      - name: Checkout source code
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
@@ -40,29 +41,26 @@ jobs:
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
 
-      - name: Clean node_modules and lock file
-        working-directory: app/frontend-src
-        run: |
-          rm -rf node_modules package-lock.json
-
-      - name: Install dependencies and run tests with coverage
+      - name: Install Node.js dependencies and run tests with coverage
         working-directory: app/frontend-src
         run: |
           npm install --save-dev jest@28.1.3 ts-jest@28.0.8 jest-preset-angular@11.1.2 jest-environment-jsdom@28.1.3 @types/jest@28.1.6 @angular-builders/jest@15.0.0
           npm run test -- --coverage
 
       - name: SonarCloud Scan
+        id: sonarcloud_scan
         uses: SonarSource/sonarcloud-github-action@v2
         with:
           projectBaseDir: app/frontend-src
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # Optional: Enforce SonarCloud Quality Gate (uncomment if needed)
-      # - name: Wait for Quality Gate result
-      #   uses: SonarSource/sonarcloud-quality-gate-action@v1.1.0
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Enforce SonarCloud Quality Gate
+        uses: SonarSource/sonarcloud-quality-gate-action@v1.1.0
+        with:
+          scanStatus: ${{ steps.sonarcloud_scan.outputs.projectStatus }}
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Build Docker image
         working-directory: app/frontend-src
@@ -72,10 +70,11 @@ jobs:
 
       - name: Scan Docker image with Trivy (fail on HIGH/CRITICAL)
         run: |
-          echo "Scanning image: $IMAGE_URI:$IMAGE_TAG"
+          echo "Scanning image with Trivy: $IMAGE_URI:$IMAGE_TAG"
           trivy image --exit-code 1 --severity HIGH,CRITICAL $IMAGE_URI:$IMAGE_TAG
 
       - name: Push Docker image to ECR
+        working-directory: app/frontend-src
         run: |
           echo "Pushing image: $IMAGE_URI:$IMAGE_TAG"
           docker push $IMAGE_URI:$IMAGE_TAG
