--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -1,4 +1,4 @@
-name: Frontend CI Pipeline
+name: Frontend CI Pipeline - SonarCloud Only
 
 on:
   push:
@@ -16,8 +16,6 @@ jobs:
       AWS_REGION: ap-south-1
       AWS_DEFAULT_REGION: ap-south-1
       ECR_REPOSITORY: ecommerce-frontend
-      SONAR_HOST: https://sonarcloud.io
-      PROJECT_KEY: chandrakatore2004_aws-eks-3tier-devops-demo # <- replace with actual key
 
     steps:
       - name: Checkout source code
@@ -43,48 +41,10 @@ jobs:
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
 
-      - name: Install Node.js dependencies and run tests
-        working-directory: app/frontend-src
-        run: |
-          npm ci || npm install
-          npm install --save-dev jest@28.1.3 ts-jest@28.0.8 jest-preset-angular@11.1.2 \
-            jest-environment-jsdom@28.1.3 @types/jest@28.1.6 @angular-builders/jest@15.0.0
-          npm run test -- --coverage
-
-      - name: SonarCloud Scan
+      - name: SonarCloud Static Code Scan
         uses: SonarSource/sonarcloud-github-action@v2
         with:
           projectBaseDir: app/frontend-src
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-      - name: Install jq for Quality Gate check
-        run: sudo apt-get update && sudo apt-get install -y jq
-
-      - name: Enforce SonarCloud Quality Gate
-        run: |
-          echo "Waiting for SonarCloud analysis to complete..."
-          for i in {1..10}; do
-            STATUS=$(curl -s -u "${{ secrets.SONAR_TOKEN }}:" \
-              "$SONAR_HOST/api/qualitygates/project_status?projectKey=$PROJECT_KEY" \
-              | jq -r '.projectStatus.status')
-
-            echo "Quality Gate status: $STATUS"
-
-            if [ "$STATUS" = "OK" ]; then
-              echo "Quality Gate passed"
-              exit 0
-            elif [ "$STATUS" = "ERROR" ]; then
-              echo "Quality Gate failed"
-              exit 1
-            fi
-
-            echo "Waiting for analysis result..."
-            sleep 10
-          done
-
-          echo "Timed out waiting for Quality Gate result"
-          exit 1
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
@@ -94,7 +54,7 @@ jobs:
           echo "Building image: $IMAGE_URI:$IMAGE_TAG"
           docker build -t $IMAGE_URI:$IMAGE_TAG -t $IMAGE_URI:latest .
 
-      - name: Scan Docker image with Trivy
+      - name: Scan Docker image with Trivy (fail on HIGH/CRITICAL)
         run: |
           echo "Scanning image with Trivy: $IMAGE_URI:$IMAGE_TAG"
           trivy image --exit-code 1 --severity HIGH,CRITICAL $IMAGE_URI:$IMAGE_TAG
