--- a/app/frontend-src/src/sonar-project.properties
+++ b/app/frontend-src/src/sonar-project.properties
@@ -1,20 +1,18 @@
-# app/frontend-src/sonar-project.properties
+# SonarCloud project and organization
+sonar.projectKey=chandrakatore2004_aws-eks-3tier-devops-demo
+sonar.organization=chandrakatore2004
 
+# Project info
+sonar.projectName=ecommerce-frontend
+sonar.projectVersion=1.0
 
-sonar.host.url=${SONAR_HOST_URL}
-sonar.login=${SONAR_TOKEN}
-
-# Project structure
+# Source settings
 sonar.sources=src
-sonar.tests=src
-sonar.test.inclusions=**/*.spec.ts
-sonar.exclusions=**/*.spec.ts,**/node_modules/**
-
-# Language
 sonar.language=ts
+sonar.exclusions=**/*.spec.ts,**/node_modules/**,**/test/**
 
-# Coverage
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# Test & coverage (optional – can skip this if you don't run tests)
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-# Optional: Improve issues location
-sonar.typescript.tsconfigPath=tsconfig.spec.json
+# Encoding
+sonar.sourceEncoding=UTF-8
