--- a/.github/workflows/Frontend-app-ci_1.yml
+++ b/.github/workflows/Frontend-app-ci_1.yml
@@ -1,4 +1,4 @@
-name: Frontend CI Pipeline - SonarCloud Only
+name: Frontend CI Pipeline-New
 
 on:
   push:
@@ -41,7 +41,7 @@ jobs:
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY" >> $GITHUB_ENV
 
-      - name: SonarCloud Static Code Scan
+      - name: Run SonarCloud static analysis
         uses: SonarSource/sonarcloud-github-action@v2
         with:
           projectBaseDir: app/frontend-src
