--- a/.github/workflows/Frontend-app-cd.yml
+++ b/.github/workflows/Frontend-app-cd.yml
@@ -2,6 +2,10 @@ name: Frontend CD Pipeline (EKS)
 
 on:
   workflow_dispatch:
+    inputs:
+      image_tag:
+        description: 'Image tag to deploy (e.g. chandrakatore2004-aws-eks-3tier-devops-demo-abc1234)'
+        required: true
   push:
     branches:
       - master
@@ -13,6 +17,7 @@ env:
   AWS_DEFAULT_REGION: ap-south-1
   ECR_REPOSITORY: ecommerce-frontend
   SONAR_PROJECT_KEY: chandrakatore2004_aws-eks-3tier-devops-demo
+  IMAGE_TAG: ${{ github.event.inputs.image_tag }}
 
 jobs:
   deploy-to-eks:
@@ -34,13 +39,6 @@ jobs:
           aws eks update-kubeconfig \
             --region $AWS_REGION \
             --name ${{ secrets.AWS_SECRET_EKS_CLUSTER_NAME }}
-
-      - name: Set image tag variables
-        run: |
-          SHORT_SHA=${GITHUB_SHA::7}
-          SAFE_REPO=$(echo "${GITHUB_REPOSITORY}" | tr '/' '-')
-          IMAGE_TAG="${SAFE_REPO}-${SHORT_SHA}"
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Render Kubernetes manifest with correct image
         run: |
